--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "modern-normalize": "^1.1.0",
     "mongodb": "^4.7.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nanoid": "^4.0.0",
     "next": "^12.1.6",
     "next-connect": "^0.12.2",
