add bookmark function

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
   },
   "homepage": "https://github.com/hoangvvo/nextjs-mongodb-app#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-brands-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@lukeed/ms": "^2.0.0",
     "ajv": "^8.11.0",
     "bcryptjs": "^2.4.3",
